# talent-promo-cma

./: .gitignore  CLAUDE.md  CONTRACT.md  Makefile  README.md  op.env
docs/: talent-promo-cma-spec.md
gateway/: pyproject.toml
gateway/tests/: conftest.py  test_cma_consolidation.py  test_fold.py  test_mock_long.py  test_mock_run.py  test_tools.py
gateway/tests/fixtures/: mock_run.jsonl  mock_run.snapshot.json  mock_run_long.jsonl  mock_run_long.snapshot.json
gateway/tp_gateway/: __init__.py  config.py  db.py  fold.py  main.py  models.py  relay.py  tools.py
gateway/tp_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gateway/tp_gateway/engines/: base.py  cma.py  mock.py  mock_long.py
gateway/tp_gateway/judge/: VENDORED.md  __init__.py  prompt_loader.py  runner.py  schemas.py  spans.py
gateway/tp_gateway/judge/prompts/: ACTIVE_VERSION
gateway/tp_gateway/judge/prompts/v0-seed/: grounding_judge_prompt.md  manifest.json  rubric_judge_prompt.md  severity_calibration.md
gateway/tp_gateway/routers/: coach.py  memory.py
infra/cma/: environment.yaml  setup.sh  talent-promo-coach.agent.yaml
scripts/: render-secrets.sh  secrets-doctor.sh  smoke_cma.py
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  intake.module.css  layout.tsx  page.tsx
web/components/: ChatBox.module.css  ChatBox.tsx  DraftPanel.module.css  DraftPanel.tsx  Feed.module.css  Feed.tsx  PlanStrip.module.css  PlanStrip.tsx  QuestionCard.module.css  QuestionCard.tsx  StatusBanner.module.css  StatusBanner.tsx
web/lib/: api.ts  diff.ts  engineClient.ts  fold.ts  (+1 more)
(+7 files in other folders)
